# vietlint

./: .gitignore  .pre-commit-config.yaml.example  .pre-commit-hooks.yaml  .vietlint-strict.toml  .vietlint.toml  CHANGELOG.md  CITATION.cff  CMakeLists.txt  MANIFEST.in  README.md  pyproject.toml  setup.py
.github/workflows/: ci.yml
cmake/: example_plugin.cpp
corpus/: train_model.py
include/vietlint/: clang_visitor.hpp  classifier.hpp  emitter.hpp  encoding_detector.hpp  lexer.hpp  lsp_server.hpp  ml_classifier.hpp  rule_engine.hpp  tree_sitter_lexer.hpp  utf8_scanner.hpp
python/: backend.py
scripts/: build_wheel.sh  collect_corpus.py  fetch_grammars.py
src/: main.cpp
src/core/: classifier.cpp  emitter.cpp  encoding_detector.cpp  lexer.cpp  rule_engine.cpp  tree_sitter_lexer.cpp  utf8_scanner.cpp
src/llvm/: clang_visitor.cpp
src/lsp/: lsp_server.cpp
src/ml/: ml_classifier.cpp  pybind_bridge.cpp
tests/: cmake_test_discovery_20eac7f7a1.json  test_all.cpp  test_classifier.cpp  test_utf8_scanner.cpp
